css/main.css
/*For Test Only*/
.form-inline{
    display: none !important;
}
/*For Test Only*/
/*Fonts*/
@import url('https://fonts.googleapis.com/css?family=Courier+Prime&display=swap');
/*Fonts*/

/*General*/

.remove-pd-mar {
    padding: 0px;
    margin: 0px;
}

.ciu-blue-bg {
    background-color: #002147;
}

.ciu-yellow-bg {
    background-color: #f2b121;
}

.small-underline {
    display: block;
    position: relative;
    text-align: center;
    margin-bottom: 40px;
    margin-top: 100px;
}

.small-underline:before {
    content: "";
    position: absolute;
    width: 50px;
    height: 1px;
    bottom: -20px;
    left: calc(50% - 25px);
    border-bottom: 5px solid black;
}

.small-underline-white {
    display: block;
    position: relative;
    text-align: center;
    margin-bottom: 40px;
    margin-top: 50px;
    color: white;
}

.small-underline-white:before {
    content: "";
    position: absolute;
    width: 50px;
    height: 1px;
    bottom: -20px;
    left: calc(50% - 25px);
    border-bottom: 5px solid white;
}

.card-text, .card-title {
    word-wrap: break-word;
    white-space: normal;
}

.slick-dots {
    bottom: 0px;
    padding: 0px 0px 5px 0px;
    margin-bottom: 0px !important;
    background-color: rgba(255, 255, 255, 0.5);
}

.slick-dots li button:before {
    color: black;
    font-size: 20px;
}

.slick-dots li.slick-active button:before {
    color: black;
    opacity: 1;
}

.slick-prev:before, .slick-next:before {
    color: black;
}
/*
.slick-next {
    right: 20px;
    z-index: 2;
}

.slick-prev {
    left: 20px;
    z-index: 2;
}
*/
.story-img {
    width: 50%;
}

/*General*/

/*Bootstrap Carousel*/

.carousel-control-prev-icon, .carousel-control-next-icon {
    height: 60px;
    width: 60px;
    outline: black;
    background-size: 100%, 100%;
    border-radius: 50%;
    /*border: 1px solid black;*/
    background-color: rgba(0, 0, 0, 0.5);
    background-image: none;
}

.carousel-control-next-icon:after {
    content: '>';
    font-size: 35px;
    font-weight: bolder;
    color: white;
}

.carousel-control-prev-icon:after {
    content: '<';
    font-size: 35px;
    font-weight: bolder;
    color: white;
}

/*Bootstrap Carousel*/

/*Top Menu*/

.top-menu-ul>li>a {
    color: #002147;
    margin-bottom: 2px;
}

.top-menu-ul>li>a:before {
    background: #002147;
}

.top-menu-ul>li>a:active {
    color: #002147;
}

.top-menu-ul>li>a:hover {
    color: #002147;
    text-decoration: none;
}

.top-menu-ul {
    color: #002147;
    list-style-type: none;
    padding: 0px !important;
    margin: 0px !important;
}

.top-menu-ul>li {
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
}

/*Top Menu*/

/*Latest News*/

.latest-news {
    display: inline-block;
    background-color: #002147;
    color: white;
    width: 100%;
    text-align: center;
}

.latest-news>a, .latest-news>a:active, .latest-news>a:hover {
    color: white;
    text-decoration: none;
}

.latest-news>a:before {
    background: white;
}

.latest-news-marquee {
    overflow: hidden;
}

.latest-news-marquee-link, .latest-news-marquee-link:active, .latest-news-marquee-link:hover {
    margin: 0px 20px;
    color: #002147;
}

/*Latest News*/

/*Logo*/

.logo {
    height: 120px;
}

.head-sse {
    font-size: 35px;
    font-family: 'Courier Prime', monospace;
    font-weight: bolder;
}

.head-ciu {
    font-size: 25px;
    font-family: 'Courier Prime', monospace;
}

/*Logo*/

/*Menu*/

.nav-link::before {
    background: #f8f9fa;
}

.nav-link {
    color: #f8f9fa !important;
    padding-left: 0px !important;
    padding-right: 0px !important;
    margin-left: 10px !important;
    margin-right: 10px !important;
}

.dropdown-menu {
    width: 400px;
    max-width: 90vw;
}

/*Menu*/

/*Social Media*/

.social-media {
    position: absolute;
    top: 30%;
    left: 0px;
}

.social-media>a>img {
    width: 50px;
}

/*Social Media*/

/*QRCode*/

.qr-code {
    position: absolute;
    top: 30%;
    right: 0px;
    background-color: white;
}

.qr-code>img {
    width: 100px;
}

.qr-code>a {
    color: grey;
}

.qr-code>a:hover {
    color: black;
}

/*QRCode*/

/*Facultu*/

.faculty-card {
    width: 200px;
    border: none;
    padding: 10px;
    background-color: #e9ecef;
}

.faculty-card:active, .faculty-card:hover {
    text-decoration: none;
}

.faculty-page-img {
    width: 100%;
    max-width: 50vw;
}

/*Facultu*/

/*Upcoming Events*/

.event-content {
    position: absolute;
    top: 0px;
    left: 0px;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    height: 100%;
    width: 100%;
    z-index: 2;
}

.event-carousel {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

.event-carousel-img {
    /*Height of all images must be the same or else it will not look good*/
    width: 100%;
    /*max-height: 200px;*/
    object-fit: cover;
}

.event-content>h1 {
    font-family: 'Tangerine', cursive;
    font-size: 50px;
}

.event-content>a {
    width: 120px;
    margin-left: auto;
    margin-right: auto;
}

/*Upcoming Events*/

/*Notice*/

.notice {
    max-height: 200px;
    overflow: hidden;
}

/*Notice*/

/*Events*/

.event-card {
    width: 400px;
    border: none;
    padding: 10px;
    background-color: #e9ecef;
}

/*Events*/

/*Faculty*/
.faculty-page-text{
    text-align: left;
}
/*Faculty*/

/*Map*/

.mapouter {
    position: relative;
    text-align: right;
    height: 200px;
    width: 100%;
}

.gmap_canvas {
    overflow: hidden;
    background: none !important;
    height: 200px;
    width: 100%;
}

/*Map*/

/*sitemap*/

.sitemap>p>a, .sitemap>p>a:hover, .sitemap>p>a:active {
    color: white;
}

/*sitemap*/

/*Hero*/

.hero-text {
    background-color: rgba(0, 0, 0, 0.8);
    font-family: 'Courier Prime', monospace;
    font-weight: bolder;
}

.hero-text>h1 {
    font-size: 4vw;
}

.hero-img {
    object-fit: cover;
    max-height: 15vw;
}

/*Hero*/

/*Courses Page*/

.course-toggle {
    /*To initially hide the tables*/
    display: none;
}

.course-btn:hover {
    background-color: #344873 !important;
}

.course-btn:active {
    background-color: #000020 !important;
}

.course-tabs {
    color: black !important;
    padding: 10px !important;
}

.course-tabs:hover {
    text-decoration: underline;
}

/*Courses Page*/

/*Events Page*/

.event-page-card {
    min-height: 450px;
}

/*Events Page*/

/*Academic Calender Page*/

.academic-calender {
    width: 60vw;
    height: 60vw;
}

/*Academic Calender Page*/

/*Responsive*/

/* Large devices (desktops, less than 1200px)*/

@media (max-width: 1199.98px) {
    /*Social Media*/
    .social-media>a>img {
        width: 40px;
    }
    /*Social Media*/
    /*QRCode*/
    .qr-code>img {
        width: 80px;
    }
    /*QRCode*/
    /*Events*/
    .event-card {
        width: 350px;
    }
    /*Events*/
    /*Bootstrap Carousel*/
    .carousel-control-prev-icon, .carousel-control-next-icon {
        height: 50px;
        width: 50px;
    }
    .carousel-control-next-icon:after, .carousel-control-prev-icon:after {
        font-size: 30px;
    }
    /*Bootstrap Carousel*/
}

/* Medium devices (tablets, less than 992px)*/

@media (max-width: 991.98px) {
    /*Logo*/
    .logo-head-text {
        text-align: center;
        margin-top: 20px;
    }
    .logo-head-nav {
        padding-left: 150px;
        padding-right: 150px;
    }
    /*Logo*/
    /*Event Carousel*/
    .event-carousel-img {
        /*max-height: 250px;*/
    }
    /*Event Carousel*/
    /*Notice*/
    .notice {
        max-height: 250px;
    }
    /*Notice*/
    /*Social Media*/
    .social-media {
        top: 28%;
    }
    /*Social Media*/
    /*QRCode*/
    .qr-code {
        top: 28%;
    }
    /*QRCode*/
    /*Academic Calender Page*/
    .academic-calender {
        width: 100%;
        height: 90vw;
    }
    /*Academic Calender Page*/
    /*Events*/
    .event-card {
        width: 300px;
    }
    /*Events*/
    /*Navbar*/
    .dropdown-menu{
        padding-left: 15px;
    }
    /*Navbar*/
}

/* Small devices (landscape phones, less than 768px)*/

@media (max-width: 767.98px) {
    /*Logo*/
    .logo-head-nav {
        padding-left: 100px;
        padding-right: 100px;
    }
    /*Logo*/
    /*Event Carousel*/
    .event-carousel-img {
        /*max-height: 200px;*/
    }
    /*Event Carousel*/
    /*Notice*/
    .notice {
        max-height: 200px;
    }
    /*Notice*/
    /*Social Media*/
    .social-media {
        top: 30%;
    }
    .social-media>a>img {
        width: 30px;
    }
    /*Social Media*/
    /*QRCode*/
    .qr-code {
        top: 30%;
    }
    .qr-code>img {
        width: 70px;
    }
    /*QRCode*/
    .story-img {
        width: 80%;
    }
    /*Hero*/
    .hero-text>h1 {
        font-size: 5vw;
    }
    /*Hero*/
}

/* Extra small devices (portrait phones, less than 576px) */

@media (max-width: 575.98px) {
    /*Logo*/
    .logo-head-nav {
        padding-left: 0px;
        padding-right: 0px;
    }
    /*Logo*/
    /*Event Carousel*/
    .event-carousel-img {
        /*max-height: 180px;*/
    }
    /*Event Carousel*/
    /*Notice*/
    .notice {
        max-height: 180px;
    }
    /*Notice*/
    /*Social Media*/
    .social-media {
        top: 20%;
    }
    /*Social Media*/
    /*QRCode*/
    .qr-code {
        top: 20%;
    }
    .qr-code>img {
        width: 50px;
    }
    /*QRCode*/
    /*Faculty*/
    .faculty-page-text {
        text-align: center;
        margin-top: 10px;
    }
    /*Faculty*/
    /*Events*/
    .event-card {
        width: 250px;
    }
    /*Events*/
    /*Academic Calender Page*/
    .academic-calender {
        width: 150vw;
        height: 150vw;
    }
    /*Academic Calender Page*/
}

/*Responsive*/

